# UPRa

./: .gitignore  docker-compose.yml
api/: Cargo.toml
api/src/: configurator.rs  main.rs  router_creator.rs
api/src/endpoints/: mod.rs  phone_comments.rs
api/src/misc/: models.rs
sql/: init_sql_tables.sql
telegram_bot/: pyproject.toml
telegram_bot/src/: dispatcher.py  main.py
telegram_bot/src/misc/: api_connection.py
telegram_bot/src/responses/: responses.py
telegram_bot/src/states/: states.py
