[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.18.0"
rbatis = "4.3.10"
rbdc = "4.3.10"
rbdc-pg = "4.3.6"
rbs = "4.3.2"
salvo = { version = "0.44.1", features = ["oapi", "logging"] }
serde = { version = "1.0.166", features = ["derive"] }
serde_json = "1.0.99"
tokio = { version = "1.29.1", features = ["macros"] }
tracing-subscriber = "0.3.17"
