[tool.poetry]
name = "telegram-bot"
version = "0.1.0"
description = ""
authors = ["0xblcklptn"]
readme = "README.md"
packages = [{include = "telegram_bot"}]

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^2.25.1"
http3 = "^0.6.7"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
